# vlm-benchmark

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
notebooks/: report.ipynb
scripts/: run_benchmark.py
src/vlm_benchmark/: data.py  evaluate.py  metrics.py  models.py  tasks.py
tests/: test_data.py  test_metrics.py  test_models.py
